--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="estilo.css">
+<title>Laika, Luna e Lulu</title>
 
 </head>
 <body>
- <h1>Laika, Luna e Lulu</h1>
-    
+    <nav id="menu-1">
+        <ul>
+         <li>Home</li>
+         <li>Desenhos</li>
+         <li>Blog</li>   
+        </ul>
+    </nav>
+    <h1>Laika, Luna e Lulu</h1><br>
+<p>Você conhece a Laika?</p>
+E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
 
 
 
