--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <h1>Laika, Luna e Lulu</h1><br>
 <p>Você conhece a Laika?</p>
 E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
+<img src="capa 1.jpg"
 
 
 
