--- a/index.html
+++ b/index.html
@@ -6,18 +6,23 @@
 <title>Laika, Luna e Lulu</title>
 
 </head>
-<body>
+<body id="interface">
+    <div>
     <nav id="menu-1">
         <ul>
-         <li>Home</li>
-         <li>Desenhos</li>
-         <li>Blog</li>   
+         <li><a href="index.html">Home</a></li>
+         <li><a href="desenhos.html">Desenhos</a></li>
+         <li><a href="blog.html">Blog</a></li> 
+         <li><a href="https://6410a15333cdf.site123.me/links-rapidos/gibis-online" target="_blank">Gibis</a></li>  
+         <li><a href="https://6410a15333cdf.site123.me/tabela-de-pre%C3%A7os" target="_blank">Emcomendar</a></li>
         </ul>
     </nav>
+    <hgroup>
     <h1>Laika, Luna e Lulu</h1><br>
 <p>Você conhece a Laika?</p>
 E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
-<img src="capa 1.jpg"
+</hgroup>
+<img src="capa 1.jpg"><br>
 
 
 
@@ -59,6 +64,7 @@ E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
 
 
 
-
+Copyright Sites-do-Arthur&copy;
+</div>
 </body>
 </html>
