--- a/blog.html
+++ b/blog.html
@@ -7,6 +7,14 @@
 </head>
 <body>
    <p>Lembra das perguntas na pagina inicial?</p>
+   <figure class="capa">
+   <img src="capa 2.jpg">
+   <figcaption>Segunda capa publicada no site anterior</figcaption>
+    </figure>
+   Vou responde-las aqui!
+   <p>A laika é a cachorra da minha vó sendo desobediente e contrariadora.Por isso o nome "sapeca"</p>
+   <p>Já a Luna é a cachorra da minha mãe sendo brava e doidona.Por isso o nome "lunatica"</p>
+   <p>Mas e a Lulu? Ela é a minha cachorra sendo destruidora e bagunceira, uma eterna adole&shy;cente.Por isso o nome "demonio dos cachorros"</p>
     
 
 
