--- a/blog.html
+++ b/blog.html
@@ -15,9 +15,11 @@
    <p>A laika é a cachorra da minha vó sendo desobediente e contrariadora.Por isso o nome "sapeca"</p>
    <p>Já a Luna é a cachorra da minha mãe sendo brava e doidona.Por isso o nome "lunatica"</p>
    <p>Mas e a Lulu? Ela é a minha cachorra sendo destruidora e bagunceira, uma eterna adole&shy;cente.Por isso o nome "demonio dos cachorros"</p>
+   <figure class="capa">
+    <img src="download.jpg">
+    <figcaption>Terceira capa publicada no site anterior</figcaption>
+    </figure>
     
-
-
 
 
 
