--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="estilo.css">
+<meta name="msvalidate.01" content="AE235ACEF8689BEECA098B61A308BBD7" />
 <title>Laika, Luna e Lulu</title>
 
 </head>
