--- a/blog.html
+++ b/blog.html
@@ -13,15 +13,17 @@
     </figure>
    Vou responde-las aqui!
    <p>A laika é a cachorra da minha vó sendo desobediente e contrariadora.Por isso o nome "sapeca"</p>
-   <p>Já a Luna é a cachorra da minha mãe sendo brava e doidona.Por isso o nome "lunatica"</p>
-   <p>Mas e a Lulu? Ela é a minha cachorra sendo destruidora e bagunceira, uma eterna adole&shy;cente.Por isso o nome "demonio dos cachorros"</p>
+   Já a Luna é a cachorra da minha mãe sendo brava e doidona.Por isso o nome "lunatica"
+   Mas e a Lulu? Ela é a minha cachorra sendo destruidora e bagunceira, uma eterna adole&shy;cente.Por isso o nome "demonio dos cachorros"
    <figure class="capa">
     <img src="download.jpg">
     <figcaption>Terceira capa publicada no site anterior</figcaption>
     </figure>
-
+    <figure class="capa">
+    <img src="1.jpg">
+    <figcaption>Foto da Laika verdadeira tirada no dia 14/05/2023</figcaption>
+    </figure>
     
-
 
 
 </body>
