--- a/blog.html
+++ b/blog.html
@@ -24,6 +24,11 @@
     <figcaption>Foto da Laika verdadeira tirada no dia 14/05/2023</figcaption>
     </figure>
     
+    <figure>
+    <img src="2.jpg">
+        <figcaption>Foto da Luna tirada em 14/05/2023</figcaption>
+    </figure>
+    <p>E ai o que achou das fotos?</p>Em breve avera uma da Lulu.
 
 
 </body>
