--- a/blog.html
+++ b/blog.html
@@ -23,7 +23,10 @@
     <img src="1.jpg">
     <figcaption>Foto da Laika verdadeira tirada no dia 14/05/2023</figcaption>
     </figure>
-    
+    <figure class="capa">
+        <img src="2.jpg">
+        <figcaption>Foto da Luna verdadeira tirada no dia 14/05/2023</figcaption>
+    </figure>
 
 
 </body>
