--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,11 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-   <p>Lembra das perguntas na pagina inicial?</p>
+   <ul>
+    <li><a href="index.html">Home</a></li>
+   </ul>
+
+    <p>Lembra das perguntas na pagina inicial?</p>
    <figure class="capa">
    <img src="capa 2.jpg">
    <figcaption>Segunda capa publicada no site anterior</figcaption>
