--- a/blog.html
+++ b/blog.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
+   <nav id="menu">
    <ul>
     <li><a href="index.html">Home</a></li>
    </ul>
+   </nav> 
 
     <p>Lembra das perguntas na pagina inicial?</p>
    <figure class="capa">
