--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="blog.css">
 </head>
 <body>
-   <nav id="menu">
+    <nav id="menu-1">
    <ul>
     <li><a href="index.html">Home</a></li>
    </ul>
