--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </nav>
     <hgroup>
     <h1>Laika, Luna e Lulu</h1><br>
-<p>Você conhece a Laika?</p>
+        <p>Site em desenvolvimento</p>
+    <p>Você conhece a Laika?</p>
 E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
 </hgroup>
 <img src="capa 1.jpg"><br>
