--- a/index.html
+++ b/index.html
@@ -65,8 +65,12 @@ E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
 
 
 
+<footer>
 
-Copyright Sites-do-Arthur&copy;
+Copyright Sites-do-Arthur&copy;<br>
+Gibis-do-Arthur&copy;<br>
+TV Laika&copy;
+</footer>
 </div>
 </body>
 </html>
