--- a/desenhos.html
+++ b/desenhos.html
@@ -6,11 +6,16 @@
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
-    <p>Aqui Você ve os desenhos da Laika, da Luna e da Lulu</p>
+    <p>Aqui Você ve os desenhos da Laika, da Luna e da Lulu.</p>
     <nav id="menu-1">
         <ul>
             <li><a href="index.html" target="_parent">Home</a></li>
         </ul>    
     </nav>
+    <Footer>
+        &copy;Sites-do-Arthur <br>
+        &copy;Gibis-do-Arthur<br>
+        &copy;TV-Laika
+    </Footer>
 </body>
 </html>
