--- a/index.html
+++ b/index.html
@@ -7,65 +7,6 @@
 
 </head>
 <body id="interface">
-    <div>
-        <h1>menu principal</h1>
-    <nav id="menu-1">
-        <ul>
-         <li><a href="index.html">Home</a></li>
-         <li><a href="desenhos.html">Desenhos</a></li>
-         <li><a href="blog.html">Blog</a></li> 
-         <li><a href="https://6410a15333cdf.site123.me/links-rapidos/gibis-online" target="_blank">Gibis</a></li>  
-         <li><a href="https://6410a15333cdf.site123.me/tabela-de-pre%C3%A7os" target="_blank">Emcomendar</a></li>
-        </ul>
-    </nav>
-    <hgroup>
-    <h1>Laika, Luna e Lulu</h1><br>
-<p>Você conhece a Laika?</p>
-E a Luna?. Mas não pod&shy;emos esque&shy;cer a Lulu!
-</hgroup>
-<img src="capa 1.jpg"><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-Copyright Sites-do-Arthur&copy;
-</div>
+    <h1> A VENDA: CONTATO Arthur</h1>
 </body>
 </html>
